--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <!-- Main colors -->
+    <color name="blue_powder">#A7B6C2</color>
+    <color name="light_gray_powder">#D6DDE3</color>
+
+    <!-- Contrast colors -->
+    <color name="dark_powder_blue">#1D252E</color>
+    <color name="dark_water_blue">#5E7D8C</color>
+
+    <!-- Text colors -->
+    <color name="dark_bluish_gray">#3A4750</color>
+    <color name="light_cool_gray">#B0B8C1</color>
+
+    <!-- Accent colors -->
+    <color name="turquoise_blue">#6CA1B7</color>
+    <color name="powder_blue">#A1B8C5</color>
 </resources>
